k8s-sample-files/timbr-mdx-sample.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: timbr-mdx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timbr-mdx
  template:
    metadata:
      labels:
        app: timbr-mdx
    spec:
      containers:
        - name: timbr
          image: timbr.azurecr.io/timbr-mdx:latest
          ports:
            - containerPort: 13000
              protocol: TCP
          resources:
            limits:
              memory: 8Gi
            requests:
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: timbr-registry-cred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: timbr-mdx
  namespace: default
spec:
  ports:
    - name: timbr-mdx
      protocol: TCP
      port: 13000
      targetPort: 13000
  selector:
    app: timbr-mdx
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
