k8s-sample-files/timbr-platform-sample.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: timbr-platform
  namespace: default
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: timbr-platform
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: timbr-platform
    spec:
      containers:
        - name: timbr-platform
          image: timbr.azurecr.io/timbr-platform-stable:latest
          ports:
            - containerPort: 8088
              protocol: TCP
          resources:
            limits:
              memory: 4Gi
            requests:
              memory: 500Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8088
              scheme: HTTP
            initialDelaySeconds: 20
            timeoutSeconds: 28
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      imagePullSecrets:
        - name: timbr-registry-cred
      restartPolicy: Always
      terminationGracePeriodSeconds: 35
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
---
kind: Service
apiVersion: v1
metadata:
  name: timbr-platform
  namespace: default
spec:
  type: LoadBalancer
  sessionAffinity: None
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: timbr-platform
  ports:
    - name: timbr-platform
      protocol: TCP
      port: 8088
      targetPort: 8088
